[metadata]
name = catatumbo
url = "https://github.com/MBizm/Catatumbo"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires = 
	Adafruit_Blinka==3.0.1
	adafruit_circuitpython_neopixel==3.4.0
	astral==1.10.1
	board==1.0
	ipinfo==3.0.0
	numpy==1.17.1
	pyowm==2.10.0
	pytz==2019.1
	requests==2.21.0
